# Django-REST-Framework

./: db.sqlite3  pyproject.toml
blog_api_project/: settings.py  urls.py
posts/: Urls.py  admin.py  models.py  serializers.py  views.py
posts/migrations/: 0001_initial.py
